2009-03-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c, providerDrv.c:
	Fixed [ 2705902 ] Deallocating NULL response headers
	(based on patch from Pratayusa)

2009-03-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryLexer.l, queryOperation.c, queryOperation.h, queryParser.y
	  test/unittest/EmbeddedTests.c, test/unittest/Makefile.am:
	Fixed [ 2141249 ] WQL parser needs to suppor the LIKE syntax
		(patch from Shashi Uli)

2009-03-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimslpCMPI.c:
	Fixed [ 2692030 ] sfcb's SLP client should use LocalConnect interface

2009-03-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerMgr.c:
	Fixed [ 2688353 ] Unnecessary condition in providerMgr.c
	(based on patch from Pratyusha Doddapaneni)
	
2009-03-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/associatorNames.OK test/xmltest/enumerateQualifiers.OK
	  test/xmltest/getQualifier.OK:
	Fixed tests for [ 2591758 ] EOF Exception when running DefineSystem

2009-03-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2591758 ] EOF Exception when running DefineSystem

2009-03-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* brokerUpc.c, cimXmlRequest.c, providerDrv.c, support.c, support.h:
	Fixed [ 2646746 ] SFCB crashes if provider MI factory functions 
	return NULL
	(based on patch from J. Bart Whitely)
	
2009-03-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* mofpp.c:
	Fixed [ 2559054 ] sfcb: sfcbmofpp doesn't recognize "//" comments
	(patch by Tyrel Datwyler)

2009-03-06  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	Fixed [ 2669147 ] Incorrect pointer assignment in providerRegister
	(found by Gnanasekar)

	* httpAdapter.c, dbpAdapter.c:
	Fixed [ 2669283 ] httpProcSem incorrectly initialized
	(found by Gnanasekar)
	
2009-03-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlOps.y: