@@ -1,5 +1,5 @@
 /*
- * $Id: control.h,v 1.3 2007/01/16 12:45:31 mihajlov Exp $
+ * $Id: control.h,v 1.4 2009/03/24 19:02:19 smswehla Exp $
  *
  * (C) Copyright IBM Corp. 2005
  *
@@ -24,6 +24,7 @@
 int setupControl(char *fn);
 void sunsetControl();
 int getControlChars(char *id, char **val);
+int getControlUNum(char *id, unsigned int *val);
 int getControlNum(char *id, long *val);
 int getControlBool(char *id, int *val);
 
